# vrp-solver

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
data/: bristol_instance.json  google_vrp_example.json  london_instance.json  multi_depot_clustered.json  multi_depot_example.json
src/: cli_utils.py  create_instance_from_addresses.py  distance_api.py  instance.py  mip_solver.py  model.py  pyvrp_solver.py  solution.py  solver.py
tests/: conftest.py  test_vrp_instance.py  test_vrp_solver.py
vrp_tests/: test_mip_solver.py  test_vrp_instance.py  test_vrp_solver.py
