[tool.poetry]
name = "vrp-solver"
version = "0.1.0"
description = "A solver for vehicle routing problems"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = ">=2.32.5,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
mip = "==1.16rc0"
pytest = ">=8.4.1,<9.0.0"
highspy = ">=1.11.0,<2.0.0"
matplotlib = ">=3.10.5,<4.0.0"
folium = "^0.17.0"
pyvrp = {path = "libs/PyVRP", develop = true}

[tool.poetry.group.dev.dependencies]
pip = "^25.2"
cmake = "^4.1.0"
black = "^24.4.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
